infra/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: java-app
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: hello-world
